--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "4",
     "lint-staged": "^10.5.4",
+    "polished": "^4.1.1",
     "prettier": "^2.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
