--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.14.2",
     "@types/styled-components-react-native": "^5.1.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.17.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "4",
