--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "server": "node api",
+    "server": "./node_modules/.bin/json-server --watch api.json",
     "postinstall": "npx jetify"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "4",
+    "json-server": "^0.16.3",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "polished": "^4.1.1",
@@ -68,7 +69,6 @@
     "jest": "^25.1.0",
     "jest-styled-components": "^7.0.3",
     "jetifier": "^1.6.6",
-    "json-server": "^0.16.3",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
